--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,8 @@
     "socket.io": "^2.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "server:dev": "NODE_ENV=development nodemon app.js",
+    "server:prod": "node app.js"
   },
   "author": "",
   "license": "ISC"
