--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "server:dev": "NODE_ENV=development nodemon app.js",
-    "server:prod": "node app.js"
+    "server:prod": "node app.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC"
