--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "node": "12.13.0"
   },
   "description": "",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node backend/server.js"
   },
   "repository": {
     "type": "git",
