--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "final_project",
-  "short_name": "final_project",
+  "name": "train-er",
+  "short_name": "train-er",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
